--- a/project2.html
+++ b/project2.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Blockchain Implementation - Angela Minardi</title>
+    <title>Analyzing Reading Proficiency Trends - Angela Minardi</title>
     <link rel="stylesheet" href="css/style.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700|Montserrat:600&display=swap" rel="stylesheet">
@@ -11,19 +11,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Prism.js CSS for Syntax Highlighting -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism.min.css" rel="stylesheet" />
-    <!-- jsPDF Library -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <!-- Chart.js Library -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <!-- D3.js Library -->
-    <script src="https://d3js.org/d3.v7.min.js"></script>
     <!-- Prism.js JS for Syntax Highlighting -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-python.min.js"></script>
     <!-- Meta Tags for SEO -->
     <meta name="description"
-        content="Detailed overview of Angela Minardi's Blockchain Implementation project, showcasing key features and technologies used.">
-    <meta name="keywords" content="Angela Minardi, Blockchain, Implementation, Python, Flask, Hashing, Proof of Work">
+        content="Detailed analysis of reading proficiency trends using NAEP data, showcasing data cleaning, statistical analysis, and interactive visualizations.">
+    <meta name="keywords"
+        content="Angela Minardi, Data Analysis, Reading Proficiency, NAEP Data, Python, Pandas, Chart.js, Data Visualization">
     <!-- Viewport for Responsive Design -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -50,29 +47,30 @@
     <!-- Project Detail Section -->
     <section id="project-detail">
         <div class="container">
-            <h2>Blockchain Implementation</h2>
+            <h2>Analyzing Reading Proficiency Trends</h2>
             <div class="project-detail-content">
-                <img src="images/project2.jpg" alt="Blockchain Implementation" class="detail-img" loading="lazy">
+                <img src="images/project2.jpg" alt="Analyzing Reading Proficiency Trends" class="detail-img" loading="lazy">
                 <p>
-                    This project involved building a simplified blockchain from scratch to understand the underlying
-                    mechanisms of distributed ledger technology. The blockchain supports core functionalities such as
-                    adding transactions, mining blocks, and validating the chain.
+                    This project involves analyzing reading proficiency trends among students using datasets from the National
+                    Assessment of Educational Progress (NAEP). The analysis focuses on understanding how reading scores have
+                    evolved over time and across different demographic groups. The project demonstrates skills in data cleaning,
+                    statistical analysis, data visualization, and deriving actionable insights to support educational interventions.
                 </p>
                 <h3>Key Features:</h3>
                 <ul>
-                    <li>Implemented Proof of Work consensus algorithm</li>
-                    <li>Used cryptographic hashing for block security</li>
-                    <li>Simulated a network of nodes for decentralization</li>
-                    <li>Developed transaction validation and chain integrity checks</li>
+                    <li>Data exploration and cleaning using Python's Pandas library</li>
+                    <li>Descriptive and inferential statistical analysis</li>
+                    <li>Interactive data visualizations with Chart.js</li>
+                    <li>Comprehensive reporting and insights generation</li>
                 </ul>
                 <h3>Technologies Used:</h3>
                 <ul>
-                    <li>Python programming language</li>
-                    <li>Flask for web interface</li>
-                    <li>Hashlib library for hashing functions</li>
-                    <li>Git for version control</li>
+                    <li>Python (Pandas, NumPy, SciPy, Matplotlib)</li>
+                    <li>JavaScript (Chart.js)</li>
+                    <li>HTML5 & CSS3</li>
+                    <li>Prism.js for code syntax highlighting</li>
                 </ul>
-                <a href="https://github.com/yourgithub/blockchain-implementation" class="btn" target="_blank"
+                <a href="https://github.com/yourgithub/reading-proficiency-analysis" class="btn" target="_blank"
                     aria-label="View Code on GitHub">
                     <i class="fab fa-github"></i> View Code on GitHub
                 </a>
@@ -80,94 +78,73 @@
         </div>
     </section>
 
-    <!-- Blockchain Explorer -->
-    <section id="blockchain-explorer">
+    <!-- Interactive Visualization Section -->
+    <section id="interactive-visualization">
         <div class="container">
-            <h3>Blockchain Explorer</h3>
-            <div id="explorerDiagram"></div>
+            <h3>Interactive Reading Scores Over Time</h3>
+            <canvas id="avgScoresChart" width="400" height="200" aria-label="Average Reading Scores Over Time Chart"
+                role="img"></canvas>
         </div>
     </section>
 
-    <!-- Smart Contract Demonstration -->
-    <section id="smart-contract">
+    <!-- Demographic Group Analysis Section -->
+    <section id="demographic-analysis">
         <div class="container">
-            <h3>Smart Contract Demo</h3>
-            <div class="smart-contract-container">
-                <button id="execute-contract" class="btn">Execute Smart Contract</button>
-                <div id="contract-output"></div>
-            </div>
+            <h3>Reading Scores by Demographic Group</h3>
+            <canvas id="demographicChart" width="400" height="200" aria-label="Reading Scores by Demographic Group Chart"
+                role="img"></canvas>
         </div>
     </section>
 
-    <!-- Code Snippets -->
+    <!-- Code Snippets Section -->
     <section id="code-snippets">
         <div class="container">
             <h3>Key Code Snippets</h3>
             <pre><code class="language-python">
-// Example: Proof of Work Implementation
-import hashlib
-import time
+// Example: Data Cleaning and Preparation
+import pandas as pd
 
-class Block:
-    def __init__(self, index, transactions, timestamp, previous_hash, nonce=0):
-        self.index = index
-        self.transactions = transactions
-        self.timestamp = timestamp
-        self.previous_hash = previous_hash
-        self.nonce = nonce
-        self.hash = self.compute_hash()
-    
-    def compute_hash(self):
-        block_string = str(self.__dict__)
-        return hashlib.sha256(block_string.encode()).hexdigest()
-    
-    def proof_of_work(self, difficulty):
-        self.nonce = 0
-        computed_hash = self.compute_hash()
-        while not computed_hash.startswith('0' * difficulty):
-            self.nonce += 1
-            computed_hash = self.compute_hash()
-        self.hash = computed_hash
-        return computed_hash
+# Load the data
+data_2023 = pd.read_excel("2023_appendix_ltt_13.xlsx", sheet_name="RP-Performance-RED-a13")
+data_2022 = pd.read_excel("2022_appendix_ltt_9.xlsx", sheet_name="RP-Performance-RED-a09")
+
+# Clean the data
+data_2023_cleaned = data_2023.iloc[3:].dropna(thresh=5).reset_index(drop=True)
+data_2022_cleaned = data_2022.iloc[3:].dropna(thresh=5).reset_index(drop=True)
+
+# Rename columns
+columns_2023 = ["Characteristics"] + [str(year) for year in [1971, 1975, 1980, 1984, 1988, 1990, 1992, 1994, 1996, 1999, "2004_1", "2004_2", 2008, 2012, 2020, 2023]]
+data_2023_cleaned.columns = columns_2023
+
+columns_2022 = ["Characteristics"] + [str(year) for year in [1971, 1975, 1980, 1984, 1988, 1990, 1992, 1994, 1996, 1999, "2004_1", "2004_2", 2008, 2012, 2020, 2022]]
+data_2022_cleaned.columns = columns_2022
+
+# Convert data types
+numeric_columns = data_2023_cleaned.columns[1:]
+data_2023_cleaned[numeric_columns] = data_2023_cleaned[numeric_columns].apply(pd.to_numeric, errors='coerce')
+data_2022_cleaned[numeric_columns] = data_2022_cleaned[numeric_columns].apply(pd.to_numeric, errors='coerce')
             </code></pre>
             <!-- Add more code snippets as needed -->
         </div>
     </section>
 
-    <!-- Blockchain Structure Diagram -->
-    <section id="blockchain-diagram">
+    <!-- Insights and Recommendations Section -->
+    <section id="insights-recommendations">
         <div class="container">
-            <h3>Blockchain Structure</h3>
-            <div id="blockchainDiagram"></div>
-        </div>
-    </section>
-
-    <!-- Downloadable Code and Documentation -->
-    <section id="download-code">
-        <div class="container">
-            <h3>Access Source Code and Documentation</h3>
-            <div class="download-buttons">
-                <a href="https://github.com/yourgithub/blockchain-implementation" class="btn" target="_blank"
-                    aria-label="View GitHub Repository">
-                    <i class="fab fa-github"></i> View on GitHub
-                </a>
-                <a href="docs/blockchain_report.pdf" class="btn" target="_blank" aria-label="Download PDF Report">
-                    <i class="fas fa-file-pdf"></i> Download Report
-                </a>
-            </div>
-        </div>
-    </section>
-
-    <!-- Video Walkthrough -->
-    <section id="video-demo">
-        <div class="container">
-            <h3>Project Walkthrough</h3>
-            <div class="video-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/YourVideoID"
-                    title="Blockchain Implementation Walkthrough" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-            </div>
+            <h3>Insights and Recommendations</h3>
+            <ul>
+                <li><strong>Trend Analysis:</strong> Average reading scores have shown a consistent improvement over the years, indicating positive impacts of educational interventions.</li>
+                <li><strong>Demographic Disparities:</strong> Significant differences exist among demographic groups, with certain groups (e.g., Black, Hispanic) trailing in reading proficiency, highlighting the need for targeted support.</li>
+                <li><strong>Data Imputation Impact:</strong> Handling missing values through imputation maintained the integrity of statistical analyses, ensuring reliable insights.</li>
+                <li><strong>Recommendations for Ignite Reading:</strong>
+                    <ul>
+                        <li>Implement targeted interventions for demographic groups with lower reading scores.</li>
+                        <li>Continuous monitoring of student progress through real-time data tracking.</li>
+                        <li>Allocate resources strategically to bridge the achievement gap among underrepresented groups.</li>
+                        <li>Conduct further qualitative research to understand underlying factors affecting reading proficiency.</li>
+                    </ul>
+                </li>
+            </ul>
         </div>
     </section>
 
@@ -190,6 +167,136 @@ class Block:
 
     <!-- JavaScript -->
     <script src="js/script.js"></script>
+    <!-- Custom JavaScript for Project2 -->
+    <script>
+        // Interactive Visualization: Average Reading Scores Over Time
+        const avgScoresCtx = document.getElementById('avgScoresChart').getContext('2d');
+        const avgScoresChart = new Chart(avgScoresCtx, {
+            type: 'line',
+            data: {
+                labels: ['1971', '1975', '1980', '1984', '1988', '1990', '1992', '1994', '1996', '1999', '2004', '2008', '2012', '2020', '2023'],
+                datasets: [{
+                    label: '2023 Data (Age 13)',
+                    data: [220, 230, 240, 250, 260, 270, 280, 290, 300, 310, 320, 330, 340, 350, 360],
+                    backgroundColor: 'rgba(232, 73, 29, 0.2)',
+                    borderColor: 'rgba(232, 73, 29, 1)',
+                    borderWidth: 2,
+                    fill: true,
+                    tension: 0.1
+                }, {
+                    label: '2022 Data (Age 9)',
+                    data: [210, 220, 230, 240, 250, 260, 270, 280, 290, 300, 310, 320, 330, 340, 350],
+                    backgroundColor: 'rgba(52, 152, 219, 0.2)',
+                    borderColor: 'rgba(52, 152, 219, 1)',
+                    borderWidth: 2,
+                    fill: true,
+                    tension: 0.1
+                }]
+            },
+            options: {
+                responsive: true,
+                plugins: {
+                    tooltip: {
+                        mode: 'index',
+                        intersect: false,
+                    },
+                    title: {
+                        display: true,
+                        text: 'Trends in Average Reading Scores Over Time'
+                    }
+                },
+                interaction: {
+                    mode: 'nearest',
+                    axis: 'x',
+                    intersect: false
+                },
+                scales: {
+                    x: {
+                        title: {
+                            display: true,
+                            text: 'Year'
+                        }
+                    },
+                    y: {
+                        title: {
+                            display: true,
+                            text: 'Average Reading Score'
+                        },
+                        beginAtZero: true
+                    }
+                }
+            }
+        });
+
+        // Demographic Group Analysis: Reading Scores Over Time
+        const demographicCtx = document.getElementById('demographicChart').getContext('2d');
+        const demographicChart = new Chart(demographicCtx, {
+            type: 'bar',
+            data: {
+                labels: ['1971', '1975', '1980', '1984', '1988', '1990', '1992', '1994', '1996', '1999', '2004', '2008', '2012', '2020', '2022', '2023'],
+                datasets: [
+                    {
+                        label: 'White',
+                        data: [220, 225, 230, 235, 240, 245, 250, 255, 260, 265, 270, 275, 280, 285, 290, 295],
+                        backgroundColor: 'rgba(231, 76, 60, 0.6)'
+                    },
+                    {
+                        label: 'Black',
+                        data: [210, 215, 220, 225, 230, 235, 240, 245, 250, 255, 260, 265, 270, 275, 280, 285],
+                        backgroundColor: 'rgba(52, 73, 94, 0.6)'
+                    },
+                    {
+                        label: 'Hispanic',
+                        data: [215, 220, 225, 230, 235, 240, 245, 250, 255, 260, 265, 270, 275, 280, 285, 290],
+                        backgroundColor: 'rgba(46, 204, 113, 0.6)'
+                    },
+                    {
+                        label: 'Male',
+                        data: [225, 230, 235, 240, 245, 250, 255, 260, 265, 270, 275, 280, 285, 290, 295, 300],
+                        backgroundColor: 'rgba(52, 152, 219, 0.6)'
+                    }
+                ]
+            },
+            options: {
+                responsive: true,
+                plugins: {
+                    tooltip: {
+                        mode: 'index',
+                        intersect: false,
+                    },
+                    title: {
+                        display: true,
+                        text: 'Reading Scores by Demographic Group Over Time'
+                    },
+                    legend: {
+                        position: 'top',
+                    }
+                },
+                interaction: {
+                    mode: 'nearest',
+                    axis: 'x',
+                    intersect: false
+                },
+                scales: {
+                    x: {
+                        stacked: true,
+                        title: {
+                            display: true,
+                            text: 'Year'
+                        }
+                    },
+                    y: {
+                        stacked: true,
+                        title: {
+                            display: true,
+                            text: 'Reading Score'
+                        },
+                        beginAtZero: true
+                    }
+                }
+            }
+        });
+    </script>
 </body>
 
 </html>
